chore: bump deps to fix critical dependency issues reported by component governance (#26093)
* chore: bump loader-utils to mitigate security issues

* chore: bump uglify-js to mitigate security issues

* chore: bump express to mitigate qs security issues

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "check:change": "beachball check",
     "check:modified-files": "node -r ./scripts/ts-node/register ./scripts/executors/check-for-modified-files",
     "check:affected-package": "node ./scripts/monorepo/checkIfPackagesAffected.js",
-    "check:installed-dependencies-versions": "satisfied --skip-invalid --ignore \"prettier|angular|lit|sass|@storybook/html|@storybook/mdx2-csf|svelte|@testing-library|vue|@cypress/react|cypress|@swc/wasm|@cactuslab/usepubsub|react-vis\"",
+    "check:installed-dependencies-versions": "satisfied --skip-invalid --ignore \"prettier|angular|lit|sass|@storybook/html|@storybook/mdx2-csf|svelte|@testing-library|vue|@cypress/react|cypress|@swc/wasm|@cactuslab/usepubsub|react-vis|@microsoft/load-themed-styles\"",
     "clean": "lage clean --verbose",
     "code-style": "lage code-style --verbose",
     "codepen": "cd packages/react && node ../../scripts/executors/local-codepen.js",
@@ -97,7 +97,7 @@
     "@microsoft/api-extractor": "7.18.1",
     "@microsoft/eslint-plugin-sdl": "0.1.9",
     "@microsoft/load-themed-styles": "1.10.26",
-    "@microsoft/loader-load-themed-styles": "1.7.205",
+    "@microsoft/loader-load-themed-styles": "2.0.17",
     "@nrwl/cli": "13.10.6",
     "@nrwl/devkit": "13.10.6",
     "@nrwl/jest": "13.10.6",
@@ -142,7 +142,7 @@
     "@types/enhanced-resolve": "3.0.7",
     "@types/enzyme": "3.10.7",
     "@types/eslint": "7.2.13",
-    "@types/express": "4.17.2",
+    "@types/express": "4.17.15",
     "@types/fs-extra": "8.0.1",
     "@types/glob": "7.1.1",
     "@types/graphviz": "0.0.34",
@@ -234,7 +234,7 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.26.0",
     "eslint-plugin-react-hooks": "4.2.0",
-    "express": "4.17.1",
+    "express": "4.17.3",
     "extract-comments": "1.1.0",
     "file-loader": "6.2.0",
     "find-free-port": "2.0.0",
