--- a/package.json
+++ b/package.json
@@ -372,7 +372,8 @@
     "@typescript-eslint/experimental-utils": "4.22.0",
     "@typescript-eslint/parser": "4.22.0",
     "@types/jest-axe/axe-core": "4.2.1",
-    "eslint": "7.25.0"
+    "eslint": "7.25.0",
+    "@mdx-js/loader/loader-utils": "~2.0.4"
   },
   "syncpack": {
     "prod": true,
